'Split header parsers and entities with no dependencies on Netty out of acteur-headers and acteur-util'
Affected Checkouts
------------------

  * acteur-modules/acteur-parent
  * giulius-modules/giulius-parent
  * giulius-selenium-tests-modules/giulius-selenium-tests-parent
  * giulius-web-modules/giulius-web-parent
  * acteur-auth
  * acteur-timetracker
  * acteur-tutorial
  * blather
  * blurt
  * bunyan-java-v2
  * generic-web-api
  * giulius-settings-etcd
  * jetcd
  * netty-http-client
  * numble
  * (root)

##### Provenance

Generated by cactus: *cactus-git* version _1.5.31_.

  * Mojo:		CommitMojo
  * Generation-Time:	2022-10-19T03:41:38Z
  * Plugin-Build:	yellow rabbit
  * Plugin-Date:	2022.09.10
  * Plugin-Commit:	f32552996bf3511e8901928b6467df125bdebbd2
  * Plugin-Repo-Clean:	true